--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
 services:
-#  web_nginx:
-#    build:
-#      context: nginx
-#      dockerfile: Dockerfile
-#    container_name: web_nginx
-#    networks:
-#      - full_cycle_network
-#    ports:
-#      - "8080:80"
-#    depends_on:
-#      - node_app
+  web_nginx:
+    image: nginx:latest
+    container_name: web_nginx
+    restart: always
+    networks:
+      - full_cycle_network
+    ports:
+      - "8080:80"
+    depends_on:
+      - node_app
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
   node_app:
     build:
       context: node
     container_name: node_app
     entrypoint: 'node index.js'
+    restart: always
     networks:
       - full_cycle_network
     depends_on:
