--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,7 @@ services:
     build:
       context: node
     container_name: node_app
-    entrypoint: 'node index.js'
-    restart: always
+    entrypoint: dockerize -wait tcp://node_db:3306 -timeout 20s node /usr/src/app/index.js
     networks:
       - full_cycle_network
     depends_on:
@@ -32,7 +31,6 @@ services:
     image: mysql:5.7
     command: --innodb-use-native-aio=0
     container_name: node_db
-    restart: always
     tty: true
     volumes:
       - ./mysql:/var/lib/mysql
